--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     "jsx-a11y/click-events-have-key-events": 0,
     "no-param-reassign": 0,
     "no-use-before-define": 0,
-    "global-require": 0
+    "global-require": 0,
+    "no-underscore-dangle": 0
   }
 }
