--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = src/modules/THREE.IK
 	url = https://github.com/sneha-belkhale/THREE.IK.git
 	branch = hingeConstraints
+[submodule "src/modules/THREE"]
+	path = src/modules/THREE
+	url = https://github.com/mrdoob/three.js/
