--- a/package.json
+++ b/package.json
@@ -16,19 +16,24 @@
   },
   "scripts": {
     "build": "webpack --colors",
-    "start": "webpack-dev-server --content-base src --hot --inline",
-    "lint": "node_modules/.bin/eslint .",
-    "lint:fix": "node_modules/.bin/eslint . --fix",
-    "push": "rsync -azP --delete  public/scene/ kiko@104.236.135.111:~/hkr-assets/scene",
-    "pull": "rsync -azP --delete  kiko@104.236.135.111:~/hkr-assets/scene/ public/scene"
+    "start": "webpack-dev-server --content-base src",
+    "lint": "node_modules/.bin/eslint src/",
+    "lint:fix": "node_modules/.bin/eslint src/ --fix",
+    "push": "rsync -azP --delete  public/assets/ kiko@104.236.135.111:~/hkr/assets",
+    "pull": "rsync -azP --delete  kiko@104.236.135.111:~/hkr/assets/ public/assets"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^5.0.2",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "husky": "^1.3.1",
