--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,4 @@
 [submodule "src/modules/THREE.IK"]
 	path = src/modules/THREE.IK
 	url = https://github.com/sneha-belkhale/THREE.IK.git
-	branch = hingeConstraints
-[submodule "src/modules/THREE"]
-	path = src/modules/THREE
-	url = https://github.com/mrdoob/three.js/
+	branch = streetRat
